--- a/src/pages/operators.css
+++ b/src/pages/operators.css
@@ -1,4 +1,4 @@
-container {
+container, a {
     border: black solid 1px;
 
   }
@@ -11,16 +11,17 @@ container {
   }
 
   .operatorList {
-    width: 90%;
+    width: 95vw;
     height: 100%;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     align-content: flex-start;
+    overflow: auto;
   }
 
   .operatorCard {
-    margin: 2%;
+    margin: 1%;
     width: 20vh;
     height: 45%;
   }
